fix work button alignment

--- a/src/Pages/Home/style.scss
+++ b/src/Pages/Home/style.scss
@@ -50,7 +50,7 @@
       width: 100%;
       display: flex;
       justify-content: space-between;
-      align-items: center;
+      align-items: flex-end;
       padding: 65px 50px;
       flex-wrap: wrap;
 
@@ -81,6 +81,7 @@
           border: 3px solid #fff;
           border-radius: 50%;
           padding: 30px 8px;
+          margin-bottom: 1.8rem;
         }
 
         &:hover {
@@ -167,7 +168,7 @@
           padding-top: 23vh;
 
           a {
-            font-family: "Playfair Display", serif;
+            font-family: 'Playfair Display', serif;
             font-size: 50px;
             font-weight: 700;
 
@@ -210,7 +211,7 @@
     }
 
     h1 {
-      font-family: "Playfair Display", serif;
+      font-family: 'Playfair Display', serif;
       font-weight: 700;
       font-size: 50px;
       margin-bottom: 30px;
@@ -329,7 +330,7 @@
     }
 
     h1 {
-      font-family: "Playfair Display", serif;
+      font-family: 'Playfair Display', serif;
       font-weight: 700;
       font-size: 50px;
 
@@ -364,7 +365,7 @@
     }
 
     h1 {
-      font-family: "Playfair Display", serif;
+      font-family: 'Playfair Display', serif;
       font-weight: 700;
       font-size: 50px;
       flex: 2;
@@ -404,7 +405,7 @@
     }
 
     h1 {
-      font-family: "Playfair Display", serif;
+      font-family: 'Playfair Display', serif;
       font-weight: 700;
       font-size: 50px;
       text-align: center;
@@ -446,7 +447,7 @@
 
     .home__container__comingSoon__contents {
       h1 {
-        font-family: "Playfair Display", serif;
+        font-family: 'Playfair Display', serif;
         font-weight: 700;
         font-size: 50px;
       }
@@ -494,7 +495,7 @@
     padding-top: 40px;
 
     h1 {
-      font-family: "Playfair Display", serif;
+      font-family: 'Playfair Display', serif;
       font-weight: 700;
       font-size: 50px;
       margin-bottom: 40px;
